--- a/www/test/public/index.html
+++ b/www/test/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>UI</title>
     <link rel="stylesheet" href="css/noscript.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
 	<link rel="stylesheet" href="css/default.css">
 	
 	<link rel="stylesheet" href="css/app.css">
